[package]
name = "ratatui_templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.25.0"
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
ratatui-widgets = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1.10"

[lib]
name = "ratatui_templates"
path = "src/lib.rs"